--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
 
 /* //Ranjith */
 /* CSS */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 /* html,body{
   background-color: #F1E8F5 !important;
 } */
@@ -540,7 +548,7 @@ p {
     top: 116%;
     left: 0;
     width: 100%;
-    background-color: var(--primary);
+    background-color: #F1E8F5;
     z-index: 8;
     padding: 10px 16px;
   }
@@ -553,6 +561,10 @@ p {
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .navbar-area.navbar-nine .navbar .navbar-nav {
     margin-right: 0;
+  }
+  #header-point{
+    display: block !important;
+    text-align: center !important;
   }
 }
 .navbar-area.navbar-nine .navbar .navbar-nav .nav-item {
@@ -985,7 +997,7 @@ p {
 ========================================*/
 .header-eight {
   position: relative;
-  padding:160px 0 100px 0;
+  padding:25px 0 100px 0;
   background-color: #F1E8F5;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1006,6 +1018,10 @@ p {
   .header-eight .header-image {
     margin-top: 40px;
   }
+  .header-imagecontent{
+    margin-top: 42px;
+    margin-left: -8rem;
+}
 }
 .header-eight .header-content {
   border-radius: 0;
