--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 /* sharif or praveen */
 
 /* //Ranjith */
@@ -10,6 +10,8 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    font-family: 'Poppins' !important;
+    background-color: #F1E8F5 !important;
 }
 /* html,body{
   background-color: #F1E8F5 !important;
@@ -26,7 +28,7 @@ html,body
   cursor: pointer;
   display: inline-flex;
   fill: currentcolor;
-  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-family: 'Poppins';
   font-size: 14px;
   font-weight: 500;
   height: 48px;
@@ -997,8 +999,14 @@ p {
 ========================================*/
 .header-eight {
   position: relative;
-  padding:25px 0 100px 0;
+  margin-top: 100px;
+  /* padding:25px 0 100px 0; */
   background-color: #F1E8F5;
+  text-decoration: none !important;
+}
+.header-eight a {
+  
+  text-decoration: none !important;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header-eight {
@@ -1011,7 +1019,7 @@ p {
   }
 }
 .header-eight .header-image img {
-  width: 100%;
+  width: 980px !important;
   border-radius: 8px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
@@ -1256,9 +1264,10 @@ p {
   }
 }
 .services-eight .single-services {
-  padding: 40px 30px;
-  border: 1px solid var(--light-1);
-  border-radius: 10px;
+  padding: 20px 30px !important;
+  border: 4px solid #FFFFFF !important;
+  border-radius: 19px !important;
+  background: rgba(255, 255, 255, 0.5);
   margin-bottom: 30px;
   -webkit-transition: all 0.3s ease-out 0s;
   -moz-transition: all 0.3s ease-out 0s;
@@ -1271,7 +1280,7 @@ p {
 }
 .services-eight .single-services:hover .service-icon {
   color: var(--white);
-  border-color: transparent;
+  border-color: transparent !important;
   background: var(--primary);
 }
 .services-eight .single-services:hover .service-icon::after {
@@ -1284,7 +1293,7 @@ p {
   border-radius: 50%;
   margin-bottom: 25px;
   background: var(--white);
-  border: 2px solid var(--primary);
+  /* border: 2px solid var(--primary); */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1314,7 +1323,7 @@ p {
   transition: all 0.3s ease-out 0s;
   z-index: -1;
   border-radius: 50%;
-  border: 1px solid transparent;
+  /* border: 1px solid transparent; */
 }
 .services-eight .single-services .service-content h4 {
   font-size: 20px;
@@ -1404,8 +1413,8 @@ p {
 
 /*===== PRICING THIRTEEN =====*/
 .pricing-fourteen {
-  padding: 100px 0;
-  background-color: var(--light-3);
+  padding: 30px 0;
+  background-color: '#F1E8F5';
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .pricing-fourteen {
@@ -1424,7 +1433,7 @@ p {
   background-color: var(--white);
   transition: all 0.4s ease;
   padding: 50px 35px;
-  text-align: center;
+  text-align: left;
   z-index: 0;
 }
 .pricing-style-fourteen:hover {
@@ -1868,7 +1877,7 @@ p {
 .footer-eleven {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: var(--white);
+  background-color:'#F1E8F5';
   position: relative;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
