--- a/src/App.css
+++ b/src/App.css
@@ -993,13 +993,15 @@ p {
   color: var(--dark-3);
   pointer-events: none;
 }
-
+.HomeHeader{
+  margin-top: 100px;
+}
 /*======================================
     header Area CSS
 ========================================*/
 .header-eight {
   position: relative;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   /* padding:25px 0 100px 0; */
   background-color: #F1E8F5;
   text-decoration: none !important;
