--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ html,body {
   background-color: #F1E8F5 !important;
   
 }
+body a{
+  text-decoration: none;
+  color: black;
+}
 
 code {
   font-family: 'Poppins' !important;
