--- a/src/Components/Service-component/services.css
+++ b/src/Components/Service-component/services.css
@@ -2,7 +2,7 @@
   services css 
 ===========================*/
 .services-eight {
-    padding: 100px 0;
+    padding-bottom: 100px ;
   }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .services-eight {
