--- a/src/App.css
+++ b/src/App.css
@@ -1276,6 +1276,7 @@ p {
 }
 
 
+
 /*===========================
   services css 
 ===========================*/
@@ -1366,10 +1367,28 @@ p {
 .channeloffered1{
   margin-top: -290px !important;
 }
+.service-icon h6{
+  position: absolute;
+  left: 90px;
+  margin-top: -25px;
+  white-space: nowrap;
+}
+.Paragrap{
+  font-size: medium;
+  position: absolute;
+  left: 90px;
+  margin-top: 30px;
+  white-space: nowrap;
+}
 
+@media (min-width: 1466px) {
+  .channeloffered1{
+    margin-top: -201px !important;
+  }
+}
 @media (min-width: 1366px) {
   .channeloffered1{
-    margin-top: -191px !important;
+    margin-top: -161px !important;
   }
 }
 @media (max-width: 1200px) {
@@ -1377,8 +1396,17 @@ p {
     margin-top: 1px !important;
   }
 }
+@media (max-width: 412px) {
+  .content{
+    text-align: center !important;
+  }
+}
 
-
+.ourservicesCard{
+  border: 4px solid #FFFFFF !important;
+  border-radius: 19px !important;
+  background: rgba(255, 255, 255, 0.5) !important;
+}
 /*===== VIDEO ONE =====*/
 .video-one {
   background-color: var(--light-3);
@@ -1470,10 +1498,10 @@ p {
   }
 }
 .pricing-style-fourteen {
-  border: 1px solid var(--light-1);
-  border-radius: 10px;
+  border: 4px solid #FFFFFF !important;
+  border-radius: 19px !important;
+  background: rgba(255, 255, 255, 0.5);
   margin-top: 30px;
-  background-color: var(--white);
   transition: all 0.4s ease;
   padding: 50px 35px;
   text-align: left;
