--- a/src/Components/Service-component/services.css
+++ b/src/Components/Service-component/services.css
@@ -1,45 +1,43 @@
 /*===========================
   services css 
 ===========================*/
-.services-eight {
-    padding-bottom: 100px ;
+.serviceSection {
+  margin-bottom: -80px ;
+}
+.service-icon img{
+  height: 75px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .services-eight {
+    padding: 80px 0 50px 0;
   }
-  @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .services-eight {
-      padding: 80px 0 50px 0;
-    }
+}
+@media (max-width: 767px) {
+  .services-eight {
+    padding: 60px 0 30px 0;
   }
-  @media (max-width: 767px) {
-    .services-eight {
-      padding: 60px 0 30px 0;
-    }
+}
+@media (max-width: 400px) {
+  .single-services{
+    padding-right:30px !important;
+    width: 260px !important;
   }
-  .services-eight .single-services {
-    padding: 40px 30px;
-    border: 1px solid var(--light-1);
-    border-radius: 10px;
-    margin-bottom: 30px;
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
+
+  .service-icon img{
+    height: 65px;
   }
-  .services-eight .single-services:hover {
-    box-shadow: var(--shadow-4);
+  .service-icon h6{
+    font-size: 13px !important;
   }
-  .services-eight .single-services:hover .service-icon {
-    color: var(--white);
-    border-color: transparent;
-    background: var(--primary);
+  .service-icon p{
+    font-size: 13px !important;
   }
-  .services-eight .single-services:hover .service-icon::after {
-    opacity: 1;
-    visibility: visible;
-  }
+ 
+  
   .services-eight .single-services .service-icon {
-    width: 78px;
-    height: 78px;
+    width: 65px !important;
+    height: 65px !important;
     border-radius: 50%;
     margin-bottom: 25px;
     background: var(--white);
@@ -56,46 +54,115 @@
     transition: all 0.3s ease-out 0s;
     position: relative;
   }
-  .services-eight .single-services .service-icon::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    background: var(--primary);
+}
+@media (max-width: 361px) {
+  .single-services{
+    padding-right:30px !important;
+    width: 240px !important;
+  }
+
+  .service-icon img{
+    height: 65px;
+  }
+  .service-icon h6{
+    font-size: 13px !important;
+  }
+  .service-icon p{
+    font-size: 13px !important;
+  }
+ 
+  
+  .services-eight .single-services .service-icon {
+    width: 65px !important;
+    height: 65px !important;
+    border-radius: 50%;
+    margin-bottom: 25px;
+    background: var(--white);
+    border: 2px solid var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary);
+    font-size: 40px;
     -webkit-transition: all 0.3s ease-out 0s;
     -moz-transition: all 0.3s ease-out 0s;
     -ms-transition: all 0.3s ease-out 0s;
     -o-transition: all 0.3s ease-out 0s;
     transition: all 0.3s ease-out 0s;
-    z-index: -1;
-    border-radius: 50%;
-    border: 1px solid transparent;
+    position: relative;
   }
-  .services-eight .single-services .service-content h4 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
-  .services-eight .single-services .service-content p {
-    color: var(--dark-3);
-  }
-  
-  /* Sharif */
+}
+.services-eight .single-services {
+  padding: 40px 30px;
+  border: 1px solid var(--light-1);
+  border-radius: 10px;
+  margin-bottom: 30px;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+}
+.services-eight .single-services:hover {
+  box-shadow: var(--shadow-4);
 
-  h6{
-    position: absolute;
-    left: 90px;
-    margin-top: -25px;
-    white-space: nowrap;
-  }
-  .Paragrap{
-    font-size: medium;
-    position: absolute;
-    left: 90px;
-    margin-top: 30px;
-    white-space: nowrap;
-  }
+}
+.services-eight .single-services:hover .service-icon {
+  color: var(--white);
+  border-color: transparent;
+  background: var(--primary);
+}
+.services-eight .single-services:hover .service-icon::after {
+  opacity: 1;
+  visibility: visible;
+}
+.services-eight .single-services .service-icon {
+  width: 78px;
+  height: 78px;
+  border-radius: 50%;
+  margin-bottom: 25px;
+  background: var(--white);
+  border: 2px solid var(--primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary);
+  font-size: 40px;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  position: relative;
+}
+
+.services-eight .single-services .service-icon::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  background: var(--primary);
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  z-index: -1;
+  border-radius: 50%;
+  border: 1px solid transparent;
+}
+.services-eight .single-services .service-content h4 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.services-eight .single-services .service-content p {
+  color: var(--dark-3);
+}
+
+/* Sharif */
+
