--- a/src/pages/API/ApiDetails.css
+++ b/src/pages/API/ApiDetails.css
@@ -205,7 +205,7 @@ audio:not([controls]) {
 	text-align: center;
 	margin: 0 0 25px;
 }
-/* h4 {
+.h4Head {
 	color: #5fcef4;
 	font-size: 18px;
 	line-height: 22px;
@@ -218,6 +218,7 @@ audio:not([controls]) {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
+/* 
 h5 {
 	color: #f68166;
 	font-size: 18px;
