--- a/src/pages/API/ApiDetails.css
+++ b/src/pages/API/ApiDetails.css
@@ -1,7 +1,7 @@
 /*--------------------------------------------------
 / Design for ProShift 2015
 --------------------------------------------------- */
-/* * {
+* {
 	margin: 0;
 	padding: 0;
 	outline: none !important;
@@ -11,22 +11,11 @@ html {
 	height: 100%;
 	width: 100%;
 	background: #fff;
-} */
-/* body {
-	position: relative;
-	width: 100%;
-	height: 100% !important;
-	min-height: 100%;
-	min-width: 700px;
-	color: #5a5550;
-	font-size: 14px;
-	line-height: 18px;
-	font-family: 'PT Sans',Verdana,Arial,Helvetica,'Trebuchet MS',trebuchet,sans-serif;
-} */
+}
 
 dt {
 	font-weight: bold;
-	color: #19bcf3;
+	color: hsl(195, 90%, 53%);
 	margin-top: 20px;
 }
 dd {
@@ -3019,8 +3008,49 @@ textarea.parsley-error {
 	border: 1px solid #555;
 }
 
-.request-body {
 
-	border: none !important;
 
+/* All mobile view */
+
+@media only screen 
+  and (min-device-width: 280px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    .content  {
+
+		min-width: 300px !important;
+		padding: 0rem 1rem;
+	}
+
+	.introInnerBox  h4 {
+
+		font-size: 1.3rem;
+	}
+
+	.introPic {
+
+		width: 1200px;
+	}
+  
 }
+
+
+/* galaxy fold */
+
+@media(max-width: 320px){ 
+ 
+	.content  {
+
+		min-width: 290px !important;
+		}
+
+	.introInnerBox  h4 {
+
+		font-size: 0.9rem;
+	}
+
+	
+  
+  }
+  
