--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "bootstrap/dist/css/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 /* sharif or praveen */
 
